# syncthing-rs

./: CHANGELOG.md  Cargo.toml  README.md  flake.nix  release-plz.toml
.github/workflows/: ci.yml  release-plz.yml
src/: client.rs  error.rs  lib.rs
src/types/: cluster.rs  config.rs  events.rs  mod.rs
syncthing-macros/: CHANGELOG.md  Cargo.toml  README.md
syncthing-macros/src/: lib.rs
syncthing-macros/tests/ui/: 01-parse.rs  02-create-new.rs  03-setter.rs  04-chained.rs  05-required.rs  06-skip-unset.rs  07-propagate-rename.rs  08-rename-required.rs  09-propagate-rename-all.rs  10-into-new.rs
syncthing-rs/: CHANGELOG.md  Cargo.toml  README.md
syncthing-rs/src/: client.rs
syncthing-rs/src/types/: cluster.rs  config.rs  db.rs  events.rs  mod.rs  system.rs
