[package]
name = "syncthing-macros"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "syncthing-rs's macros."
repository = "https://github.com/hertelukas/syncthing-rs"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
quote = "1.0.39"
syn = { version = "2.0.99", features = ["full", "visit-mut", "parsing", "extra-traits"] }
proc-macro2 = "1.0"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
trybuild = "1.0.104"
serde_json = { version = "1.0" }
