[package]
name = "syncthing-rs"
version = "0.1.0-alpha.3"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Rust wrapper around the Syncthing API"
repository = "https://github.com/hertelukas/syncthing-rs"
readme = "README.md"
keywords = ["syncthing", "rest", "http", "async"]

[dependencies]
chrono = { version = "0.4.44", features = ["serde"] }
log = "0.4.29"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
syncthing-macros = { version = "0.1.0-alpha.2", path = "../syncthing-macros" }
thiserror = "2.0.18"
tokio = { version = "1.52.1", features = ["full"] }

[dev-dependencies]
httpmock = "0.8.3"
rstest = "0.26.1"
testcontainers = "0.27.3"
